--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<h1>Testimonials</h1>
+	<div class="main">
+      
+      <div class="column1">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      </div>
+      <div id="bottom">-John Doe</div>
+    </div>
+	<div class="main">
+      
+      <div class="column1">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      </div>
+      <div id="bottom">-Jane Smith</div>
+    </div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
