--- a/main.html
+++ b/main.html
@@ -12,17 +12,17 @@
 	<h1>Testimonials</h1>
 	<div class="main">
       
-      <div class="column1">
+      <p class="column1">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      </div>
-      <div id="bottom">-John Doe</div>
+      </p>
+      <p id="bottom">-John Doe</p>
     </div>
 	<div class="main">
       
-      <div class="column1">
+      <p class="column1">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      </div>
-      <div id="bottom">-Jane Smith</div>
+      </p>
+      <p id="bottom">-Jane Smith</p>
     </div>
 	
     <script type="text/javascript" src="./script.js">
